hphp/test/zend/good/ext/session/tests/bug67972.php.expectf

Fatal error: Call to undefined method SessionHandler::create_sid() in %s/bug67972.php on line 3
